# JijBench

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  build-requirements.in  codecov.yml  dev-requirements.in  doc-requirements.in  docker-compose.yml  docs-requirements.in  format-requirements.in  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.in
.github/workflows/: dependabot-auto-merge.yml  publish-mkdocs.yml  python-publish.yml  python-test.yml  static.yml
.jb_results/benchmark_6dcb7363-90c4-4ba8-b515-95dbf1be9424/artifact/2fae581a-2434-4bb8-b1d1-6ae82ebb91ed/bc32452c-a81d-414c-93fe-b46eff8af816/: artifact.pkl
docs/: benchmark.md  experiment.md  gen_ref_pages.py  getting-started.md  index.md  tutorial_parameter-search_TSP.md  tutorials_parameter-search_TSP.md
docs/overrides/: gen_ref_pages.py  home.html  main.html
docs/overrides/assets/javascripts/: custom.a7283b5f.min.js.map
jijbench/: __init__.py  _version.py  const.py  evaluation.py  evaluator.py  typing.py
jijbench/artifact/: __init__.py  artifact.py
jijbench/benchmark/: __init__.py  benchmark.py  decorator.py  validation.py
jijbench/components/: __init__.py  artifact.py  base.py  dir.py  id.py  table.py
jijbench/containers/: containers.py
jijbench/dashboard/: app.py  cli.py  dashboard.py  session.py
jijbench/dashboard/handlers/: instance_data.py  routing.py
jijbench/dataset/: instance_data.py
jijbench/dataset/Instances/large/knapsack/: knapPI_2_10000_1000_1.json  knapPI_3_10000_1000_1.json
jijbench/dataset/Instances/medium/knapsack/: knapPI_1_1000_1000_1.json  (+2 more)
jijbench/datasets/: __init__.py  model.py  problem.py
jijbench/datasets/problems/: nurse_scheduling.py  travelling_salesman_with_time_windows.py
jijbench/elements/: array.py  base.py  date.py  id.py
jijbench/evaluation/: __init__.py  _metrics.py  evaluation.py  evaluation_dev.py
jijbench/exceptions/: __init__.py  exceptions.py
jijbench/experiment/: __init__.py  _parser.py  artifact_parser.py  experiment.py
jijbench/functions/: __init__.py  append.py  concat.py  factory.py  math.py  metrics.py  solver.py
jijbench/id/: __init__.py  id.py
jijbench/io/: io.py
jijbench/make_instance/: atsp_translate.py
jijbench/mappings/: __init__.py  mappings.py
jijbench/node/: __init__.py  base.py
jijbench/node/array/: __init__.py  array.py
jijbench/node/data/: __init__.py  array.py  artifact.py  database.py  date.py  experiment.py  id.py  record.py  table.py  value.py
jijbench/node/database/: __init__.py  artifact.py  base.py  record.py  table.py
jijbench/node/functions/: __init__.py  benchmark.py  concat.py  factory.py  math.py  solver.py
jijbench/objects/: artifact.py  base.py  dir.py  table.py
jijbench/parasearch/: bench.py  benchmark.py  experiment.py
jijbench/parasearch/make_instance/: bpp_translate.py  knapsack_translate.py  tsp_transplate.py  tsptw_translate.py
jijbench/parasearch/problems/: __init__.py  bin_packing.py  knapsack.py  nurse_scheduling.py  tsp.py  tsptw.py
jijbench/solver/: __init__.py  base.py  jijzept.py  solver.py
jijbench/table/: __init__.py  table.py
jijbench/tree/: tree.py
jijbench/visualization/: __init__.py
jijbench/visualization/figure/: route.py
jijbench/visualization/metrics/: plot.py  utils.py
jijbench/visualization/metrics/baseplot/: baseplot.py
jijbench/visualization/metrics/constraintplot/: constraintplot.py
jijbench/visualization/metrics/parallelplot/: parallelplot.py
tests/: conftest.py  test_benchmark.py  test_containers.py  test_dashboard.py  test_datasets.py  test_elements.py  test_evaluation.py  test_experiment.py  test_figure.py  test_functions.py  test_io.py  test_metrics_baseplot.py  test_metrics_boxplot.py  test_metrics_constraintplot.py  test_metrics_parallelplot.py  test_metrics_utils.py  test_problem.py  test_solver.py
tests/figure/: test_graph.py  test_route.py  test_schedule.py  test_timeseries.py
tests/metrics/: test_baseplot.py  test_constraintplot.py  test_parallelplot.py  test_utils.py
(+2902 files in other folders)
