[tool.poetry]
name = "jijbench"
version = "0.1.0"
description = ""
authors = ["Jij Inc."]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pytest = "^6.2.5"
jijzept = "^1.9.1"
openjij = "^0.4.6"
matplotlib = "^3.5.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
