[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
name = jijbench
author = Jij Inc.
long_description = file: README.md
long_description_content_type = text/markdown
author_email = info@j-ij.com
license = Other/Proprietary License
license_files = LICENSE.txt
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
python_requires = >=3.8, <3.11
setup_requires= 
    setuptools_scm[toml]
    pytest-runner
    setuptools
    wheel
    build
install_requires=
    openjij ~= 0.5.8
    jijzept ~= 1.10.9
    jijmodeling ~= 0.9.25
    numpy < 1.24.0
    pandas ~= 1.4.3
    dimod <= 0.11.00; python_version < "3.10"
    dimod < 0.12.0; python_version >= "3.10"
    pyqubo<1.1.0; python_version < "3.10"
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    pytest-runner
    pytest-randomly
    pytest-spec
    pytest-asyncio
    pytest-cython
    coverage
zip_safe = false
