[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
name = jijbench
author = Jij Inc.
long_description = file: README.md
long_description_content_type = text/markdown
author_email = info@j-ij.com
license = Other/Proprietary License
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
python_requires = >=3.8, <3.11
setup_requires= 
    setuptools-git-versioning
    pytest-runner
    setuptools
    wheel
    build
install_requires=
    openjij >0.6.0, < 0.7.0
    jijzept < 1.14.0
    jijmodeling < 0.11.0
    numpy > 1.23.0, < 1.25.0
    pandas > 1.5.0, < 1.6.0
    dimod < 0.13.0,
    dill < 0.4.0
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    pytest-runner
    pytest-randomly
    pytest-spec
    pytest-asyncio
    pytest-cython
    coverage
zip_safe = false
